--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3,6 +3,7 @@ en:
     composer:
       underline_ui_button_title: "Underline text"
       underline_ui_default_text: "Text"
+      strikethrough_ui_default_text: "Text"
       color_ui_button_title: "Color text"
       color_ui_default_text: "Text"
       addimg_ui_button_title: "Add an image"
