--- a/config/locales/client.ru.yml
+++ b/config/locales/client.ru.yml
@@ -11,9 +11,13 @@ ru:
       addimg_ui_default_text: "http://"
       floatl_ui_button_title: "Обтекание справа"
       floatl_ui_default_text: "Изображение"
+      floatr_ui_button_title: "Обтекание слева"
+      floatr_ui_default_text: "Изображение"
       center_ui_button_title: "По центру"
       center_ui_default_text: "Текст"
       right_ui_button_title: "По правому краю"
       right_ui_default_text: "Текст"
       justify_ui_button_title: "По ширине"
       justify_ui_default_text: "Текст"
+      hspoiler_ui_button_title: "Спойлер"
+      hspoiler_ui_default_text: "Текст"
