--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -11,9 +11,15 @@ en:
       addimg_ui_default_text: "http://"
       floatl_ui_button_title: "Add content in the left"
       floatl_ui_default_text: "Image"
+      floatr_ui_button_title: "Add content in the right"
+      floatr_ui_default_text: "Image"
       center_ui_button_title: "Center content"
       center_ui_default_text: "Text"
       right_ui_button_title: "Align to the right"
       right_ui_default_text: "Text"
       justify_ui_button_title: "Justify a text"
       justify_ui_default_text: "Text"
+      hspoiler_ui_button_title: "Spoiler"
+      hspoiler_ui_default_text: "Text"
+      hcenter_ui_button_title: "Align spoilers and headers"
+      hcenter_ui_default_text: "Header"
